# civitas

./: CMakeLists.txt  IModalityInitializer.h  LanguagePacksApp.qrc  LanguagePacksQt.qrc  README.md  ctbasictoolbar.cpp  ctbasictoolbar.h  ctinitializer.cpp  ctinitializer.h  custominteractorstyle2d.cpp  custominteractorstyle2d.h  datadicom.cpp  datadicom.h  gallery.cpp  gallery.h  imageutils.cpp  imageutils.h  main.cpp  mainwindow.cpp  mainwindow.h  modalityinitializerfactory.cpp  modalityinitializerfactory.h  mrinitializer.cpp  mrinitializer.h  thumbnaillistwidget.cpp  thumbnaillistwidget.h  vtkpipelineviewer.cpp  vtkpipelineviewer.h  vtkviewermanager.cpp  vtkviewermanager.h
translations/: CIVITAS_en_US.ts  CIVITAS_ru_RU.ts
